fix a lot of issues with the android app
- expand image section in the readme